# SmartView

./: .gitattributes  .gitignore  AGENTS.md  README.md  pom.xml
contracts/ai-api/: README.md  openapi.yaml
contracts/mq/: README.md  profile_analyze_result.schema.json  profile_analyze_task.schema.json  report_generate_result.schema.json  report_generate_task.schema.json  resume_parse_result.schema.json  resume_parse_task.schema.json  resume_vectorize_result.schema.json  resume_vectorize_task.schema.json
contracts/web-api/: README.md  openapi.yaml
develop_plan/: plan_1.0.md  smartview-task-plan_1.0.md
docs/: architecture-improvements.md  integration-summary.md  interview-policy.md  resume-workflow.md
docs/deployment/: production-config.md
docs/errors/: task0.1_root_structure_plan_errors.md  task2.2_authentication_plan_errors.md  (+2 more)
smartview-ai/: .env.example  README.md  pyproject.toml
smartview-ai/app/: __init__.py  main.py
smartview-ai/app/api/v1/: health.py  resume.py  router.py
smartview-ai/app/core/: config.py  errors.py  logging.py  trace.py
smartview-ai/app/schemas/: __init__.py  internal.py  resume.py
smartview-ai/app/services/: resume_parser.py
smartview-ai/app/workers/: __init__.py  resume_worker.py
smartview-ai/tests/: __init__.py  test_health.py  test_resume_flow.py  test_resume_parser.py  test_resume_schemas.py
smartview-infra/: .env.example  docker-compose.yml
smartview-server/: pom.xml
smartview-web/: README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.ts
smartview-web/src/: main.tsx
(+132 files in other folders)
