[project]
name = "smartview-ai"
version = "0.1.0"
description = "SmartView FastAPI AI service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "langgraph>=0.6.0",
  "PyMuPDF>=1.26.0",
  "pydantic-settings>=2.4.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
test = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "pyyaml>=6.0.0"
]
ocr = [
  "paddleocr>=3.0.0",
  "paddlepaddle>=3.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
